--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,11 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.10.4",
+    "bcrypt": "^5.1.1",
     "express": "^4.19.2",
     "graphql": "^16.8.1",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
