--- a/server/package.json
+++ b/server/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "@apollo/server": "^4.10.4",
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "graphql": "^16.8.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.3.2"
+    "mongoose": "^8.3.2",
+    "openai": "^4.47.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
