--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "graphql": "^16.8.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.2",
+    "mongoose-unique-validator": "^5.0.1",
     "openai": "^4.47.1"
   },
   "devDependencies": {
