--- a/client/package.json
+++ b/client/package.json
@@ -15,10 +15,14 @@
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "canvas": "^2.11.2",
+    "cheerio": "^1.0.0-rc.12",
     "graphql": "^16.8.1",
     "jwt-decode": "^3.1.2",
     "openai": "^4.47.1",
+    "pixelmatch": "^6.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
