--- a/server/package.json
+++ b/server/package.json
@@ -15,19 +15,22 @@
     "@apollo/server": "^4.10.4",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
+    "browsers": "^1.0.2",
     "canvas": "^2.11.2",
     "cheerio": "^1.0.0-rc.12",
+    "chrome": "^0.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "graphql": "^16.8.1",
+    "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.2",
     "mongoose-unique-validator": "^5.0.1",
     "node-fetch": "^3.3.2",
     "openai": "^4.55.5",
     "pixelmatch": "^6.0.0",
-    "puppeteer": "^22.14.0"
+    "puppeteer": "^22.15.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
