--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm run dev\"",
     "install": "cd server && npm i && cd ../client && npm i --production=false",
     "seed": "cd server && npm run seed",
-    "build": "cd client && npm run build",
+    "build": "cd client && npm run build && ../server && npx puppeteer browsers install chrome",
     "render-build": "npm install && npm run build"
   },
   "keywords": [],
