--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "start": "node server.js",
     "seed": "node seeds/seed.js",
     "watch": "nodemon server.js",
-    "postinstall": "puppeteer install"
+    "postinstall": "ls /opt/render/.cache/puppeteer/chrome/linux-127.0.6533.88/ && npm run build"
   },
   "keywords": [],
   "author": "",
